Add style.css, auth.php

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Varun's Blog for all Authors</title>
 </head>
 <body>
@@ -8,11 +9,22 @@
 	Hey there! Welcome to Varun's Blog! Here you can view articles by various authors as well as sign up to write your own articles for the world. Happy reading!		
 	</div>
 
+	<div class="auth">
+		<form action="auth.php" method="post" accept-charset="utf-8">
+			Username:<input type="text" name="username" value=""><br>
+			Password:<input type="password" name="password" value="">
+			<button type="submit">Submit</button>
+		</form>
+	</div>
+
 	<nav>
 		<ul>
-			<li><a href="all_articles">All Articles</a></li>
+			<li><a href="all_articles.html">All Articles</a></li>
 			<li><a href="login">Login</li>
+			<li><a href="index.php">php</li>
 		</ul>
 	</nav>
 </body>
 </html>
+
+	
