--- a/all_articles.html
+++ b/all_articles.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<title>All Articles</title>
 </head>
 
