--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<title>Varun's Blog for all Authors</title>
 </head>
-<body>
+<body class="container">
 	<div class="intro">
-	Hey there! Welcome to Varun's Blog! Here you can view articles by various authors as well as sign up to write your own articles for the world. Happy reading!		
+	
+	<h1>Hey there!</h1>
+	
+
+	<br>
+
+	<h3>Welcome to Varun's Blog! Here you can view articles by various authors as well as sign up to write your own articles for the world. Happy reading!</h3>
 	</div>
 
 	<div class="auth">
@@ -20,7 +27,7 @@
 	<nav>
 		<ul>
 			<li><a href="all_articles.html">All Articles</a></li>
-			<li><a href="login">Login</li>
+			<li><a href="login.html">Login</li>
 			<li><a href="index.php">php</li>
 		</ul>
 	</nav>
