--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<?php
+// Start the Session
+session_start();
+?>
+
 <!doctype html>
 <html>
 <head>
@@ -21,6 +26,7 @@
 			Username:<input type="text" name="username" value=""><br>
 			Password:<input type="password" name="password" value="">
 			<button type="submit">Submit</button>
+			
 		</form>
 	</div>
 
