Add add_user.html for new users

--- a/index.html
+++ b/index.html
@@ -21,20 +21,12 @@ session_start();
 	<h3>Welcome to Varun's Blog! Here you can view articles by various authors as well as sign up to write your own articles for the world. Happy reading!</h3>
 	</div>
 
-	<div class="auth">
-		<form action="auth.php" method="post" accept-charset="utf-8">
-			Username:<input type="text" name="username" value=""><br>
-			Password:<input type="password" name="password" value="">
-			<button type="submit">Submit</button>
-			
-		</form>
-	</div>
-
 	<nav>
 		<ul>
 			<li><a href="all_articles.html">All Articles</a></li>
-			<li><a href="login.html">Login</li>
-			<li><a href="index.php">php</li>
+			<li><a href="login.html">Login</a></li>
+			<li><a href="reset.php">Reset Database</a></li>
+			<li><a href="add_user.html">Add User</a></li>
 		</ul>
 	</nav>
 </body>
