--- a/login.html
+++ b/login.html
@@ -7,26 +7,7 @@ session_start();
 	<head>
 		<meta charset="utf-8">
 		<title>Varun's Blog for all Authors</title>
-		<script type="text/javascript">
-			function authenticate() {
-			    var auth = new XMLHttpRequest();
-			    var uname = document.getElementById('username').value;
-			    var pass = document.getElementById('password').value;
-			    var str = "username=" + uname + "&password=" + pass;
-			    auth.open('POST', '/auth.php');
-			    auth.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-			    auth.send(str);
-			    auth.onreadystatechange = function() {
-			        document.getElementById('insert').innerHTML = auth.responseText;
-			    }
-			}
-
-			function reset() {
-				var reset_ajax = new XMLHttpRequest();
-				reset_ajax.open("GET", "reset.php");
-				reset.send();
-			}
-		</script>
+		<script src="/javascripts/auth.js" type="text/javascript" charset="utf-8" async defer></script>
 	</head>
 	<body>
 		<div class="container">
@@ -38,7 +19,7 @@ session_start();
 					<button onclick="authenticate()" type="button">Submit</button>
 				</fieldset>
 			</form>
-			<button type="button" onclick="reset()">RESET SQL TABLE</button>
+			<button onclick="reset()" type="button">RESET SQL TABLE</button>
 		</div>
 		<p id="insert"></p>
 	</body>
