Add bootstrap styling to login and add_user pages

--- a/add_user.html
+++ b/add_user.html
@@ -7,11 +7,23 @@ session_start();
 	<head>
 		<title>Signup</title>
 		<script src="/javascripts/add.js" type="text/javascript" charset="utf-8" async defer></script>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/signin.css">
 	</head>
 	<body>
-		<input type="text" name="username" placeholder="username" id="uname">
-		<input type="password" name="password" id="pass">
-		<button onclick="add()" type="button">Submit</button>
-		<p id="change"></p>
+		<div class="container">
+			<form class="form-signin" role="form">
+				<fieldset>
+					<legend><h3 class="form-signin-heading"> Please Sign-Up</h3></legend>
+					<input class="form-control" type="text" name="username" placeholder="username" id="uname">
+					<input class="form-control" type="password" name="password" id="pass" placeholder="password">
+					<input class="form-control" type="password" name="password-check" id="password-check" placeholder="Re-enter password">
+					<button onclick="add()" type="button" class="btn btn-primary btn-lg">Submit</button>
+				</fieldset>
+			</form>
+
+
+			<p id="change"></p>
+		</div>
 	</body>
 </html>
