--- a/login.html
+++ b/login.html
@@ -7,19 +7,24 @@ session_start();
 	<head>
 		<meta charset="utf-8">
 		<title>Varun's Blog for all Authors</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/signin.css">
+		<!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
 		<script src="/javascripts/auth.js" type="text/javascript" charset="utf-8" async defer></script>
 	</head>
 	<body>
 		<div class="container">
-			<form>
+			<form class="form-signin" role="form">
 				<fieldset>
-					<legend><h3 class="form-signin-heading">Please sign in</h2></legend>
-					<input id="username" type="username" name="username" placeholder="username" required>
-					<input id="password" type="password" name="password" placeholder="password" required>
-					<button onclick="authenticate()" type="button">Submit</button>
+					<legend><h3 class="form-signin-heading">Please sign in</h3></legend>
+					<input class="form-control" id="username" type="username" name="username" placeholder="username" required autofocus>
+					<input class="form-control" id="password" type="password" name="password" placeholder="password" required>
+					<button onclick="authenticate()" type="button" class="btn btn-lg btn-primary btn-block">Login</button>
+					<br>
+					<button onclick="reset()" type="button" class="btn btn-primary btn-lg">RESET SQL TABLE</button>
 				</fieldset>
 			</form>
-			<button onclick="reset()" type="button">RESET SQL TABLE</button>
+			<!-- <button onclick="reset()" type="button" class="btn btn-primary btn-lg">RESET SQL TABLE</button> -->
 		</div>
 		<p id="insert"></p>
 	</body>
