--- a/index.html
+++ b/index.html
@@ -2,34 +2,43 @@
 // Start the Session
 session_start();
 ?>
-
 <!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<title>Varun's Blog for all Authors</title>
-</head>
-<body class="container">
-	<div class="intro">
-	
-	<h1>Hey there!</h1>
-	
-
-	<br>
-
-	<h3>Welcome to Varun's Blog! Here you can view articles by various authors as well as sign up to write your own articles for the world. Happy reading!</h3>
-	</div>
-
-	<nav>
-		<ul>
-			<li><a href="all_articles.html">All Articles</a></li>
-			<li><a href="login.html">Login</a></li>
-			<li><a href="reset.php">Reset Database</a></li>
-			<li><a href="add_user.html">Add User</a></li>
-		</ul>
-	</nav>
-</body>
-</html>
-
-	
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<title>Varun's Blog for all Authors</title>
+	</head>
+	<body>
+		<div class="container">
+			<div class="intro">
+				<h1> </h1><br>
+				
+				<h1>Hey there!</h1>
+				
+				<br>
+				<h3>Welcome to Varun's Blog! Here you can view articles by various authors as well as sign up to write your own articles for the world. Happy reading!</h3>
+			</div>
+			<nav class="navbar-wrapper navbar-default navbar-fixed-top" role="navigation">
+				<div class="container">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="#	">Varun's Blog</a>
+					</div>
+					<div class="collapse navbar-collapse navbar-ex1-collapse nav navbar-nav">
+						<a class="navbar-brand" href="all_articles.html">All Articles</a>
+						<a class="navbar-brand" href="login.html">Login</a>
+						<a class="navbar-brand" href="reset.php">Reset Database</a>
+						<a class="navbar-brand" href="add_user.html">Add User</a>
+						<a class="navbar-brand" href="post_article.html">Post Article</a>
+					</div>
+					<!-- <div class="btn-group" role="group" aria-label="...">
+						<button type="button" class="btn btn-default"><a class="navbar-brand" href="all_articles.html">All Articles</a></button>
+						<button type="button" class="btn btn-default"><a class="navbar-brand" href="login.html">Login</a></button>
+						<button type="button" class="btn btn-default"><a class="navbar-brand" href="reset.php">Reset Database</a>
+						</button>
+						<button type="button" class="btn btn-default"><a class="navbar-brand" href="reset.php"><a class="navbar-brand" href="add_user.html">Add User</a></button>
+					</div> -->
+				</nav>
+			</div>
+		</body>
+	</html>
