Add disabling feature for forms

--- a/add_user.html
+++ b/add_user.html
@@ -16,9 +16,11 @@ session_start();
 				<fieldset>
 					<legend><h3 class="form-signin-heading"> Please Sign-Up</h3></legend>
 					<input class="form-control" type="text" name="username" placeholder="username" id="uname">
+					<br>
 					<input class="form-control" type="password" name="password" id="pass" placeholder="password">
-					<input class="form-control" type="password" name="password-check" id="password-check" placeholder="Re-enter password">
-					<button onclick="add()" type="button" class="btn btn-primary btn-lg">Submit</button>
+					<input class="form-control" type="password" name="password-check" id="repass" placeholder="Re-enter password">
+					<br>
+					<button onclick="add()" type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
 				</fieldset>
 			</form>
 
