--- a/post_article.html
+++ b/post_article.html
@@ -14,7 +14,9 @@ session_start();
 			<form class="form-signin" role="form">
 				<fieldset>
 					<legend><h3 class="form-signin-heading">Please Post Your Article</h3></legend>
-					<input class="form-control article" id="username" type="text" name="username" placeholder="Username" required autofocus>
+					<input class="form-control" id="username" type="text" name="username" placeholder="Username" required autofocus>
+					<br>
+					<input class="form-control" id="title" type="text" name="title" placeholder="Title" required>
 					<br>
 					<textarea id="article" name="article" class="form-control" rows="10" placeholder="Article"></textarea>
 					<br>
